<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Forms">

    <View
        android:id="@+id/rectangle_1"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#211951"
        />

    <TextView
        android:id="@+id/borrower_s_"
        android:layout_width="224dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="Borrower's Authentication Form"
        android:textAppearance="@style/borrower_s_"
        android:textColor="#FDFDFD"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageButton
        android:id="@+id/btnSend"
        android:layout_width="29.8dp"
        android:layout_height="29.78dp"
        android:background="@drawable/send"
        tools:layout_editor_absoluteX="342dp"
        tools:layout_editor_absoluteY="16dp" />

    <View
        android:id="@+id/rectangle_2"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#D9D9D9"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="56dp" />

    <TextView
        android:id="@+id/part_1_borr"
        android:layout_width="237dp"
        android:layout_height="17dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/part_1_borr"
        android:textAppearance="@style/part_1_borr"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rectangle_2"
        app:layout_constraintTop_toTopOf="@+id/rectangle_2" />

    <View
        android:id="@+id/rectangle_3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#7663E6"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="87dp" />

    <TextView
        android:id="@+id/device_borr"
        android:layout_width="94dp"
        android:layout_height="13dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/device_borr"
        android:textAppearance="@style/device_borr"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="94dp" />

    <View
        android:id="@+id/rectangle_4"
        android:layout_width="1dp"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#7663E6"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="88dp" />

    <TextView
        android:id="@+id/name_and_ad"
        android:layout_width="94dp"
        android:layout_height="39dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/name_and_ad"
        android:textAppearance="@style/name_and_ad"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="94dp" />

    <View
        android:id="@+id/rectangle_5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#7663E6"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="207dp" />

    <TextView
        android:id="@+id/date_of_dev"
        android:layout_width="118dp"
        android:layout_height="13dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/date_of_dev"
        android:textAppearance="@style/date_of_dev"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="214dp" />

    <View
        android:id="@+id/rectangle_6"
        android:layout_width="1dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#7663E6"
        tools:layout_editor_absoluteX="228dp"
        tools:layout_editor_absoluteY="207dp" />

    <TextView
        android:id="@+id/borrowing_n"
        android:layout_width="93dp"
        android:layout_height="13dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/borrowing_n"
        android:textAppearance="@style/borrowing_n"
        tools:layout_editor_absoluteX="239dp"
        tools:layout_editor_absoluteY="214dp" />

    <View
        android:id="@+id/rectangle_7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#7663E6"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="286dp" />

    <View
        android:id="@+id/rectangle_8"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#D9D9D9"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="287dp" />

    <TextView
        android:id="@+id/part_2_borr"
        android:layout_width="252dp"
        android:layout_height="17dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/part_2_borr"
        android:textAppearance="@style/part_2_borr"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rectangle_8"
        app:layout_constraintTop_toTopOf="@+id/rectangle_8" />

    <TextView
        android:id="@+id/i_hereby_au"
        android:layout_width="325dp"
        android:layout_height="217dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:lineSpacingExtra="3sp"
        android:text="@string/i_hereby_au"
        android:textAppearance="@style/i_hereby_au"
        android:translationY="-1.35sp"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="348dp" />

    <View
        android:id="@+id/rectangle_9"
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#7663E6"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="609dp" />

    <View
        android:id="@+id/rectangle_10"
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#7663E6"
        tools:layout_editor_absoluteX="248dp"
        tools:layout_editor_absoluteY="610dp" />

    <TextView
        android:id="@+id/borrower1"
        android:layout_width="59dp"
        android:layout_height="14dp"
        android:gravity="top"
        android:lineSpacingExtra="2sp"
        android:text="@string/borrower1"
        android:textAppearance="@style/borrower1"
        android:translationY="-1.03sp"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="612dp" />

    <TextView
        android:id="@+id/date1"
        android:layout_width="59dp"
        android:layout_height="14dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:lineSpacingExtra="2sp"
        android:text="@string/date1"
        android:textAppearance="@style/date1"
        android:translationY="-1.03sp"
        tools:layout_editor_absoluteX="248dp"
        tools:layout_editor_absoluteY="612dp" />

    <View
        android:id="@+id/rectangle_11"
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#7663E6"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="655dp" />

    <View
        android:id="@+id/rectangle_12"
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#7663E6"
        tools:layout_editor_absoluteX="248dp"
        tools:layout_editor_absoluteY="655dp" />

    <TextView
        android:id="@+id/borrower2"
        android:layout_width="59dp"
        android:layout_height="14dp"
        android:gravity="top"
        android:lineSpacingExtra="2sp"
        android:text="@string/borrower2"
        android:textAppearance="@style/borrower2"
        android:translationY="-1.03sp"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="657dp" />

    <TextView
        android:id="@+id/date2"
        android:layout_width="59dp"
        android:layout_height="14dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:lineSpacingExtra="2sp"
        android:text="@string/date2"
        android:textAppearance="@style/date2"
        android:translationY="-1.03sp"
        tools:layout_editor_absoluteX="248dp"
        tools:layout_editor_absoluteY="657dp" />
</androidx.constraintlayout.widget.ConstraintLayout>